@@ -47,7 +47,7 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
 
     static HotSpotResolvedPrimitiveType[] primitives;
 
-    private JavaKind kind;
+    private final JavaKind kind;
     HotSpotObjectConstantImpl mirror;
 
     /**
@@ -107,8 +107,8 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
-    public ResolvedJavaType[] getInterfaces() {
-        return new ResolvedJavaType[0];
+    public List<ResolvedJavaType> getInterfaces() {
+        return List.of();
     }
 
     @Override
@@ -213,23 +213,23 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
-    public ResolvedJavaField[] getInstanceFields(boolean includeSuperclasses) {
-        return new ResolvedJavaField[0];
+    public List<ResolvedJavaField> getInstanceFields(boolean includeSuperclasses) {
+        return List.of();
     }
 
     @Override
-    public ResolvedJavaField[] getStaticFields() {
-        return new ResolvedJavaField[0];
+    public List<ResolvedJavaField> getStaticFields() {
+        return List.of();
     }
 
     @Override
-    public Annotation[] getAnnotations() {
-        return new Annotation[0];
+    public List<Annotation> getAnnotations() {
+        return List.of();
     }
 
     @Override
-    public Annotation[] getDeclaredAnnotations() {
-        return new Annotation[0];
+    public List<Annotation> getDeclaredAnnotations() {
+        return List.of();
     }
 
     @Override
@@ -287,13 +287,13 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
-    public ResolvedJavaMethod[] getDeclaredConstructors() {
-        return new ResolvedJavaMethod[0];
+    public List<ResolvedJavaMethod> getDeclaredConstructors() {
+        return List.of();
     }
 
     @Override
-    public ResolvedJavaMethod[] getDeclaredMethods() {
-        return new ResolvedJavaMethod[0];
+    public List<ResolvedJavaMethod> getDeclaredMethods() {
+        return List.of();
     }
 
     @Override
@@ -308,10 +308,9 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
 
     @Override
     public boolean equals(Object obj) {
-        if (!(obj instanceof HotSpotResolvedPrimitiveType)) {
+        if (!(obj instanceof HotSpotResolvedPrimitiveType that)) {
             return false;
         }
-        HotSpotResolvedPrimitiveType that = (HotSpotResolvedPrimitiveType) obj;
         return that.kind == kind;
     }
 
@@ -327,7 +326,7 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
 
     @Override
     public List<AnnotationData> getAnnotationData(ResolvedJavaType type1, ResolvedJavaType type2, ResolvedJavaType... types) {
-        return Collections.emptyList();
+        return List.of();
     }
 
 }
